--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
